[package]
name = "mdev-parser"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Parse the Busybox mdev configuration file"
repository = "https://github.com/rust-italia/mdev-parser"

[dependencies]
regex = "1.5.4"
tracing = "0.1.30"
pest = "2.1.3"
pest_derive = "2.1.0"
anyhow = "1.0.53"
