[package]
name = "mdev-parser"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "Parse the Busybox mdev configuration file"
repository = "https://github.com/rust-italia/mdev-parser"

[dependencies]
anyhow = "1.0.79"
pest = "2.7.7"
pest_derive = "2.7.7"
regex = "1.10.3"
tracing = "0.1.40"
